add 404 page, add page loader

--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -2,5 +2,6 @@
   "Язык": "Русский",
   "Главная": "Главная",
   "О нас": "О сайте",
-  "Переключить": "Переключить"
+  "Переключить": "Переключить",
+  "Страница не найдена": "Страница не найдена"
 }
