--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -2,5 +2,6 @@
   "Язык": "English",
   "Главная": "Main",
   "О нас": "About us",
-  "Переключить": "Toggle"
+  "Переключить": "Toggle",
+  "Страница не найдена": "Page not found"
 }
