--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -3,5 +3,7 @@
   "Главная": "Главная",
   "О нас": "О сайте",
   "Переключить": "Переключить",
-  "Страница не найдена": "Страница не найдена"
+  "Страница не найдена": "Страница не найдена",
+  "Что-то пошло не так": "Что-то пошло не так",
+  "Перезагрузить страницу": "Перезагрузить страницу"
 }
